--- a/app/src/main/res/layout/activity_main__screen.xml
+++ b/app/src/main/res/layout/activity_main__screen.xml
@@ -1,66 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation= "vertical"
     tools:context="pace.cs3892018team5.dev.chinesefortuneaide.Main_Screen">
 
-    <RelativeLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
 
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Fortune" />
+    <android.support.design.widget.TabLayout
+      android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id = "@+id/tablayout"
+        android:background="#cd3c3c"
+        android:minHeight="?attr/actionBarSize"
+        android:theme = "@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        >
 
-        <EditText
-            android:id="@+id/editText2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/editText"
-            android:layout_centerHorizontal="true"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Word" />
 
-        <EditText
-            android:id="@+id/editText3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/editText2"
-            android:layout_marginTop="11dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Fact" />
 
-        <EditText
-            android:id="@+id/editText4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/editText3"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Quiz" />
+    </android.support.design.widget.TabLayout>
 
-        <EditText
-            android:id="@+id/editText5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/editText4"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Setting" />
-    </RelativeLayout>
-</android.support.constraint.ConstraintLayout>
+    <android.support.v4.view.ViewPager
+        android:layout_width = "match_parent"
+        android:layout_height="fill_parent"
+        android:id = "@+id/pager"
+        >
+
+    </android.support.v4.view.ViewPager>
+</LinearLayout>
