--- a/app/src/main/res/layout/activity_main__screen.xml
+++ b/app/src/main/res/layout/activity_main__screen.xml
@@ -13,8 +13,7 @@
       android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id = "@+id/tablayout"
-        android:background="#cd3c3c"
-        android:minHeight="?attr/actionBarSize"
+        android:background="#FFC62828"
         android:theme = "@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         >
 
@@ -30,3 +29,4 @@
 
     </android.support.v4.view.ViewPager>
 </LinearLayout>
+    <!-- android:minHeight="attr/actionBarSize"-->
