--- a/app/src/main/res/layout/fragment_tab4.xml
+++ b/app/src/main/res/layout/fragment_tab4.xml
@@ -2,14 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backgroud"
     tools:context="pace.cs3892018team5.dev.chinesefortuneaide.Tab4">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width = "wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Facts"
-        android:layout_centerInParent="true"
-        android:textSize = "30dp" />
 
+    <TextView
+        android:id="@+id/textViewFact"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Fact"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
 </FrameLayout>
