--- a/app/src/main/res/menu/m_setting.xml
+++ b/app/src/main/res/menu/m_setting.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:title="Setting"
+        android:id="@+id/id_set"
+        android:orderInCategory="100"
+        android:icon="@drawable/setting_icon"
+        app:showAsAction="always" />
 
 
 </menu>
