varney finished the Quiz screen

--- a/app/src/main/res/layout/fragment_tab5.xml
+++ b/app/src/main/res/layout/fragment_tab5.xml
@@ -8,4 +8,37 @@
     <!-- TODO: Update blank fragment layout -->
 
 
+    <RelativeLayout
+        android:id="@+id/quiz"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/backgroud">
+
+        <Button
+            android:id="@+id/btnBeginner2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btnBeginner"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="58dp"
+            android:text="Intermediate" />
+
+        <Button
+            android:id="@+id/btnBeginner3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/btnBeginner"
+            android:layout_below="@+id/btnBeginner2"
+            android:layout_marginTop="51dp"
+            android:text="Difficult" />
+
+        <Button
+            android:id="@+id/btnBeginner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="106dp"
+            android:text="Beginner" />
+    </RelativeLayout>
 </FrameLayout>
