--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -9,8 +9,10 @@
 
 
     <RelativeLayout
+        android:id="@+id/fortune"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/backgroud">
 
         <ImageButton
 
@@ -19,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="209dp"
+            android:layout_marginTop="208dp"
             android:adjustViewBounds="false"
             android:gravity="center"
             android:src="@drawable/fortunecookie" />
