--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -12,19 +12,26 @@
         android:id="@+id/fortune"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/backgroud">
+        android:background="@drawable/spalsh_background">
 
         <ImageButton
 
             android:id="@+id/btnFortune"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="208dp"
+            android:layout_marginBottom="148dp"
             android:adjustViewBounds="false"
             android:gravity="center"
             android:src="@drawable/fortunecookie" />
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitEnd"
+        android:src="@drawable/dragon" />
 
 </FrameLayout>
