--- a/app/src/main/res/layout/fragment_tab4.xml
+++ b/app/src/main/res/layout/fragment_tab4.xml
@@ -1,11 +1,19 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroud"
+    android:background="@drawable/spalsh_background"
     tools:context="pace.cs3892018team5.dev.chinesefortuneaide.Tab4">
 
     <!-- TODO: Update blank fragment layout -->
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitEnd"
+        android:src="@drawable/dragon" />
 
     <ListView
         android:id="@+id/list_fact"
