--- a/app/src/main/res/layout/activity_quiz1__screen.xml
+++ b/app/src/main/res/layout/activity_quiz1__screen.xml
@@ -4,21 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Quiz_Screen_Easy1">
+    tools:context=".Quiz1_Screen">
+
+
+
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/acti"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
 
     </android.support.design.widget.AppBarLayout>
+
+    <include layout="@layout/content_quiz1__screen" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
