--- a/app/src/main/res/layout/activity_quiz__screen__easy.xml
+++ b/app/src/main/res/layout/activity_quiz__screen__easy.xml
@@ -4,28 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Quiz_Screen_Easy">
+    tools:context=".Quiz_Screen_Easy1">
 
     <Button
         android:id="@+id/choice1"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="121dp"
         android:background="#0091EA"
         android:padding="8dp"
         android:text="False"
         android:textColor="#fff"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="419dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/choice" />
 
     <Button
         android:id="@+id/choice"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="332dp"
         android:background="#0091EA"
         android:padding="8dp"
         android:text="True"
         android:textColor="#fff"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="331dp" />
+        app:layout_constraintBottom_toTopOf="@+id/choice1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="spread_inside" />
 
 </android.support.constraint.ConstraintLayout>
