--- a/app/src/main/res/layout/activity_quiz1__screen.xml
+++ b/app/src/main/res/layout/activity_quiz1__screen.xml
@@ -18,7 +18,41 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_quiz1__screen" />
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:context=".Quiz_Screen_Easy1">
+
+        <Button
+            android:id="@+id/choice4"
+            android:layout_width="384dp"
+            android:layout_height="wrap_content"
+            android:background="#0091EA"
+            android:padding="8dp"
+            android:text="False"
+            android:textColor="#fff"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="374dp" />
+
+        <Button
+            android:id="@+id/choice5"
+            android:layout_width="0dp"
+            android:layout_height="39dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="316dp"
+            android:background="#0091EA"
+            android:padding="8dp"
+            android:text="True"
+            android:textColor="#fff"
+            app:layout_constraintBottom_toTopOf="@+id/choice1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="spread_inside" />
+    </android.support.constraint.ConstraintLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
