--- a/app/src/main/res/layout/activity_quiz__screen__easy.xml
+++ b/app/src/main/res/layout/activity_quiz__screen__easy.xml
@@ -35,6 +35,7 @@
         android:textColor="#fff"
         app:layout_constraintBottom_toTopOf="@+id/choice1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="spread_inside" />
