Created the logic for the quiz (intermediate) and created the interface, the data is connected to our firebase database where it fetches and displays the data on the quiz

--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -14,4 +14,24 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:src="@drawable/logo" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="46dp"
+        android:textSize="26sp"
+        android:text="Welcome!" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="53dp"
+        android:textSize="26sp"
+        android:text=" Click the tabs or scroll right to learn Chinese! " />
 </RelativeLayout>
