Created the logic for the quiz (intermediate) and created the interface, the data is connected to our firebase database where it fetches and displays the data on the quiz. Also created a result screen for the quiz

--- a/app/src/main/res/layout/activity_main__screen.xml
+++ b/app/src/main/res/layout/activity_main__screen.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation= "vertical"
+
     tools:context="pace.cs3892018team5.dev.chinesefortuneaide.Main_Screen">
 
 
@@ -14,7 +14,9 @@
         android:layout_height="wrap_content"
         android:id = "@+id/tablayout"
         android:background="#cd3c3c"
-
+        android:layout_alignParentBottom="true"
+        android:elevation="6dp"
+        app:tabMode="fixed"
         android:theme = "@style/ThemeOverlay.AppCompat.Dark.ActionBar"
 
         >
@@ -32,4 +34,4 @@
         >
 
     </android.support.v4.view.ViewPager>
-</LinearLayout>
+</RelativeLayout>
