--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -17,14 +17,13 @@
         <ImageButton
 
             android:id="@+id/btnFortune"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="148dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:adjustViewBounds="false"
-            android:gravity="center"
-            android:src="@drawable/fortunecookie" />
+            android:background="@drawable/cookie"
+            android:gravity="center" />
     </RelativeLayout>
 
     <ImageView
