--- a/app/src/main/res/layout/fragment_tab4.xml
+++ b/app/src/main/res/layout/fragment_tab4.xml
@@ -8,15 +8,27 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitEnd"
-        android:src="@drawable/dragon" />
-
-    <ListView
-        android:id="@+id/list_fact"
+    <RelativeLayout
+        android:id="@+id/fact"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/list_fact"
+            android:layout_width="325dp"
+            android:layout_height="275dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="24dp" />
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:scaleType="fitEnd"
+            android:src="@drawable/dragon" />
+    </RelativeLayout>
+
 </FrameLayout>
