added backgound for quiz screens. buttons size need to be adjusted

--- a/app/src/main/res/layout/activity_quiz__screen__easy.xml
+++ b/app/src/main/res/layout/activity_quiz__screen__easy.xml
@@ -3,8 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/spalsh_background"
     android:layout_height="match_parent"
     tools:context=".Quiz_Screen_Easy1">
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitEnd"
+        app:srcCompat="@drawable/dragon" />
 
     <Button
         android:id="@+id/choice1"
