--- a/app/src/main/res/layout/adapter_fact.xml
+++ b/app/src/main/res/layout/adapter_fact.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="368dp"
-        android:layout_height="551dp"
+        android:layout_height="200dp"
         android:orientation="horizontal"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
@@ -23,6 +23,9 @@
             android:id="@+id/fact"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@android:color/background_light"
+            android:textSize="18sp"
+            android:textStyle="bold" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
