--- a/app/src/main/res/layout/adapter_word.xml
+++ b/app/src/main/res/layout/adapter_word.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="368dp"
-        android:layout_height="29dp"
+        android:layout_height="32dp"
         android:orientation="horizontal"
         android:weightSum="100"
         tools:layout_editor_absoluteX="8dp"
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TextView"
-            android:textColor="@android:color/background_light"
+            android:textColor="@android:color/white"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -27,9 +27,8 @@
             android:id="@+id/ENG"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="TextView"
-            android:textColor="@android:color/background_light"
+            android:textColor="@android:color/white"
             android:textSize="24sp"
             android:textStyle="bold" />
     </LinearLayout>
