--- a/app/src/main/res/layout/fragment_tab5.xml
+++ b/app/src/main/res/layout/fragment_tab5.xml
@@ -1,37 +1,52 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pace.cs3892018team5.dev.chinesefortuneaide.Tab1">
+    tools:context=".Tab5">
 
     <!-- TODO: Update blank fragment layout -->
 
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:src="@drawable/logo" />
+    <RelativeLayout
+        android:id="@+id/quiz"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/spalsh_background">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
-        android:textSize="26sp"
-        android:text="Welcome!" />
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="fitEnd"
+            android:src="@drawable/dragon" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="53dp"
-        android:textSize="26sp"
-        android:text=" Click the tabs or scroll right to learn Chinese! " />
-</RelativeLayout>
+        <Button
+            android:id="@+id/btnBeginner2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btnBeginner"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="58dp"
+            android:text="Intermediate" />
+
+        <Button
+            android:id="@+id/btnBeginner3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/btnBeginner"
+            android:layout_below="@+id/btnBeginner2"
+            android:layout_marginTop="51dp"
+            android:text="Difficult" />
+
+        <Button
+            android:id="@+id/btnBeginner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="106dp"
+            android:text="Beginner" />
+    </RelativeLayout>
+</FrameLayout>
