adjusted the buttons size

--- a/app/src/main/res/layout/activity_quiz2__screen.xml
+++ b/app/src/main/res/layout/activity_quiz2__screen.xml
@@ -10,7 +10,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="40dp">
 
@@ -18,92 +18,107 @@
             android:id="@+id/score_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:layout_alignBottom="@+id/score"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="31dp"
             android:text="Score"
-            android:textSize="25sp" />
+            android:textColor="@android:color/background_light"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="27dp"
             android:text="0"
-            android:textSize="30sp" />
+            android:textColor="@android:color/background_light"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/question"
+            android:layout_width="300dp"
+            android:layout_height="70dp"
+            android:layout_below="@+id/score_text"
+            android:layout_marginTop="23dp"
+            android:layout_toStartOf="@+id/score"
+            android:padding="8dp"
+            android:text="Which thing is alive?"
+            android:textAlignment="textStart"
+            android:textColor="@android:color/background_light"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/choice2"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/choice3"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp"
+            android:background="#0091EA"
+            android:padding="8dp"
+            android:text="door"
+            android:textColor="#fff"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/choice3"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/choice4"
+            android:layout_alignStart="@+id/choice2"
+            android:layout_marginBottom="23dp"
+            android:background="#0091EA"
+            android:padding="8dp"
+            android:text="rock"
+            android:textColor="#fff"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/choice4"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/choice1"
+            android:layout_alignStart="@+id/choice3"
+            android:layout_marginBottom="19dp"
+            android:background="#0091EA"
+            android:padding="8dp"
+            android:text="plant"
+            android:textColor="#fff"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/choice1"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/quit"
+            android:layout_alignStart="@+id/choice4"
+            android:layout_marginBottom="30dp"
+            android:background="#0091EA"
+            android:padding="8dp"
+            android:text="bird"
+            android:textColor="#fff"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/quit"
+            android:layout_width="150dp"
+            android:layout_height="39dp"
+
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:background="@android:color/holo_orange_light"
+            android:padding="8dp"
+            android:text="quit"
+            android:textColor="#fff"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/question"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginBottom="45dp"
-        android:padding="8dp"
-        android:text="Which thing is alive?"
-        android:textSize="20sp" />
-
-
-    <Button
-        android:id="@+id/choice1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:background="#0091EA"
-        android:padding="8dp"
-        android:text="bird"
-        android:textColor="#fff" />
-
-    <Button
-        android:id="@+id/choice2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:background="#0091EA"
-        android:padding="8dp"
-        android:text="door"
-        android:textColor="#fff" />
-
-    <Button
-        android:id="@+id/choice3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:background="#0091EA"
-        android:padding="8dp"
-        android:text="rock"
-        android:textColor="#fff" />
-
-    <Button
-        android:id="@+id/choice4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:background="#0091EA"
-        android:padding="8dp"
-        android:text="plant"
-        android:textColor="#fff" />
-
-
-    <Button
-        android:id="@+id/quit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:background="#B71C1C"
-        android:padding="8dp"
-        android:text="quit"
-        android:textColor="#fff"
-
-        />
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
