--- a/app/src/main/res/layout/activity_quiz1__screen.xml
+++ b/app/src/main/res/layout/activity_quiz1__screen.xml
@@ -26,30 +26,31 @@
 
         <Button
             android:id="@+id/choice4"
-            android:layout_width="384dp"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="39dp"
             android:background="#0091EA"
             android:padding="8dp"
             android:text="False"
             android:textColor="#fff"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="374dp" />
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="92dp"
+            tools:layout_editor_absoluteY="455dp" />
 
         <Button
             android:id="@+id/choice5"
-            android:layout_width="0dp"
+            android:layout_width="200dp"
             android:layout_height="39dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="316dp"
+            android:layout_marginTop="388dp"
             android:background="#0091EA"
             android:padding="8dp"
             android:text="True"
             android:textColor="#fff"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/choice1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="spread_inside" />
