--- a/app/src/main/res/layout/activity_quiz1__screen.xml
+++ b/app/src/main/res/layout/activity_quiz1__screen.xml
@@ -1,12 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/spalsh_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Quiz1_Screen">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="40dp">
 
+        <TextView
+            android:id="@+id/score_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/score"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="31dp"
+            android:text="Score"
+            android:textColor="@android:color/background_light"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="27dp"
+            android:text="0"
+            android:textColor="@android:color/background_light"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/question"
+            android:layout_width="300dp"
+            android:layout_height="70dp"
+            android:layout_below="@+id/score_text"
+            android:layout_marginTop="23dp"
+            android:layout_toStartOf="@+id/score"
+            android:padding="8dp"
+            android:text="Which thing is alive?"
+            android:textAlignment="textStart"
+            android:textColor="@android:color/background_light"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+
+        <Button
+            android:id="@+id/btnTrue"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="190dp"
+            android:background="#0091EA"
+            android:padding="8dp"
+            android:text="`True"
+            android:textColor="#fff"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnFalse"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="109dp"
+            android:background="#0091EA"
+            android:padding="8dp"
+            android:text="False"
+            android:textColor="#fff"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/quit"
+            android:layout_width="150dp"
+            android:layout_height="39dp"
+
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:background="@android:color/holo_orange_light"
+            android:padding="8dp"
+            android:text="quit"
+            android:textColor="#fff"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
 
 
     <android.support.design.widget.AppBarLayout
@@ -14,52 +102,10 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-
-
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context=".Quiz_Screen_Easy1">
+    <include layout="@layout/content_quiz2__screen" />
 
-        <Button
-            android:id="@+id/choice4"
-            android:layout_width="384dp"
-            android:layout_height="wrap_content"
-            android:background="#0091EA"
-            android:padding="8dp"
-            android:text="False"
-            android:textColor="#fff"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="374dp" />
 
-        <Button
-            android:id="@+id/choice5"
-            android:layout_width="0dp"
-            android:layout_height="39dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="316dp"
-            android:background="#0091EA"
-            android:padding="8dp"
-            android:text="True"
-            android:textColor="#fff"
-            app:layout_constraintBottom_toTopOf="@+id/choice1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="spread_inside" />
-    </android.support.constraint.ConstraintLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
-
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
