--- a/app/src/main/res/layout/adapter_fact.xml
+++ b/app/src/main/res/layout/adapter_fact.xml
@@ -7,22 +7,23 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="200dp"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="8dp"
+        android:layout_width="325dp"
+        android:layout_height="550dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="30dp"
         tools:layout_editor_absoluteY="8dp">
 
         <ImageView
             android:id="@+id/fact_image"
-            android:layout_width="200dp"
-            android:layout_height="150dp"
+            android:layout_width="330dp"
+            android:layout_height="200dp"
             app:srcCompat="@drawable/chinese_map" />
 
         <TextView
             android:id="@+id/fact"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:scrollbars="vertical"
             android:text="TextView"
             android:textColor="@android:color/background_light"
             android:textSize="18sp"
