--- a/app/src/main/res/layout/adapter_word.xml
+++ b/app/src/main/res/layout/adapter_word.xml
@@ -7,8 +7,8 @@
 
     <LinearLayout
         android:layout_width="368dp"
-        android:layout_height="32dp"
-        android:orientation="horizontal"
+        android:layout_height="65dp"
+        android:orientation="vertical"
         android:weightSum="100"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="11dp">
