--- a/app/src/main/res/layout/activity_quiz2__screen.xml
+++ b/app/src/main/res/layout/activity_quiz2__screen.xml
@@ -111,6 +111,7 @@
 
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
+            android:layout_marginBottom="12dp"
             android:background="@android:color/holo_orange_light"
             android:padding="8dp"
             android:text="quit"
