--- a/app/src/main/res/layout/activity_result2.xml
+++ b/app/src/main/res/layout/activity_result2.xml
@@ -4,16 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/spalsh_background"
+    android:background="@drawable/spalsh_new"
     tools:context=".ResultActivity2">
 
 
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="fitEnd"
-            app:srcCompat="@drawable/dragon" />
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="fitEnd"
+        android:visibility="gone"
+        app:srcCompat="@drawable/dragon" />
 
         <TextView
             android:id="@+id/grade"
