--- a/app/src/main/res/layout/fragment_tab5.xml
+++ b/app/src/main/res/layout/fragment_tab5.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/spalsh_background"
+    android:background="@drawable/spalsh_new"
     tools:context=".Tab5">
 
     <!-- TODO: Update blank fragment layout -->
@@ -18,7 +18,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="fitEnd"
-            android:src="@drawable/dragon" />
+            android:src="@drawable/dragon"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/btnBeginner2"
