--- a/app/src/main/res/layout/adapter_fact.xml
+++ b/app/src/main/res/layout/adapter_fact.xml
@@ -4,29 +4,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/box_fact"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="325dp"
-        android:layout_height="550dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="8dp">
+    <ImageView
+        android:id="@+id/fact_image"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="92dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/fact"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:srcCompat="@drawable/chinese_map" />
 
-        <ImageView
-            android:id="@+id/fact_image"
-            android:layout_width="330dp"
-            android:layout_height="200dp"
-            app:srcCompat="@drawable/chinese_map" />
+    <TextView
+        android:id="@+id/fact"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="342dp"
+        android:layout_marginEnd="66dp"
+        android:layout_marginStart="68dp"
+        android:scrollbars="vertical"
+        android:text="TextView"
+        android:textColor="@android:color/background_dark"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fact_image" />
 
-        <TextView
-            android:id="@+id/fact"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="vertical"
-            android:text="TextView"
-            android:textColor="@android:color/background_light"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
