--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -12,7 +12,7 @@
         android:id="@+id/fortune"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/spalsh_background">
+        android:background="@drawable/spalsh_new">
 
         <ImageButton
 
@@ -31,6 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="fitEnd"
-        android:src="@drawable/dragon" />
+        android:src="@drawable/dragon"
+        android:visibility="gone" />
 
 </FrameLayout>
