--- a/app/src/main/res/layout/fragment_tab3.xml
+++ b/app/src/main/res/layout/fragment_tab3.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/spalsh_background"
+    android:background="@drawable/spalsh_new"
     tools:context="pace.cs3892018team5.dev.chinesefortuneaide.Tab3">
 
     <!-- TODO: Update blank fragment layout -->
@@ -41,7 +41,7 @@
                 android:scaleType="fitEnd"
                 android:src="@drawable/dragon"
                 android:theme="@style/AlertDialog.AppCompat.Light"
-                android:visibility="visible" />
+                android:visibility="gone" />
 
         </RelativeLayout>
 
