--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -8,41 +8,42 @@
     <!-- TODO: Update blank fragment layout -->
 
 
-    <RelativeLayout
+     <RelativeLayout
         android:id="@+id/fortune"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/spalsh_new">
+        android:background="@mipmap/spalsh_new">
 
         <ImageButton
 
             android:id="@+id/btnFortune"
             android:layout_width="300dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:adjustViewBounds="false"
-            android:background="@drawable/fortune"
+            android:background="@mipmap/fortune"
             android:gravity="center" />
 
         <ImageButton
             android:id="@+id/fortuneImage"
-            android:layout_width="301dp"
-            android:layout_height="244dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="120dp"
-            android:src="@drawable/myscrolnew"
-            android:visibility="invisible" />
+            android:layout_width="252dp"
+            android:layout_height="209dp"
+            android:layout_centerInParent="true"
+            android:background="@mipmap/fortunemg"
+            android:textStyle="bold"
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/txtFortune"
-            android:layout_width="262dp"
-            android:layout_height="124dp"
+            android:layout_width="236dp"
+            android:layout_height="236dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="142dp"
-            android:textSize="40px" />
+            android:layout_marginBottom="141dp"
+            android:text='the great Patience is key, a wait short or long will have its reward", "?????,???????????fox'
+            android:textSize="70px"
+            android:visibility="visible" />
 
     </RelativeLayout>
 
@@ -51,7 +52,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="fitEnd"
-        android:src="@drawable/dragon"
+        android:layout_marginTop="40dp"
+        android:src="@mipmap/dragon"
         android:visibility="gone" />
 
 </FrameLayout>
